# Expense-Tracker

./: .env.example  .flake8  .gitignore  DEPLOY.md  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
Backend/: .env.example  .env.production.example  Makefile  pyproject.toml
Backend/apps/core/: models.py
Backend/apps/finance/: filters.py  signals.py  tests.py  urls.py
Backend/apps/finance/management/commands/: detect_recurring.py
Backend/apps/finance/migrations/: 0001_initial.py  0002_recurringrule_and_more.py
Backend/apps/finance/services/: recurring.py  transfers.py
Backend/apps/reports/: serializers.py  services.py  urls.py  views.py
Backend/apps/users/: admin.py  managers.py  serializers.py
Backend/config/settings/: base.py  dev.py  prod.py  test.py
Backend/requirements/: base.in  base.txt  dev.txt  prod.txt
Frontend/: README.md  index.html  package-lock.json
Frontend/src/: App.jsx  main.jsx
Frontend/src/api/: auth.js  client.js  finance.js  recurring.js  reports.js
Frontend/src/auth/: AuthContext.jsx
Frontend/src/components/: AuthShell.jsx  CashflowChart.jsx  Layout.jsx  ProtectedRoute.jsx  ui.jsx
Frontend/src/pages/: Accounts.jsx  Budgets.jsx  (+7 more)
api/: index.py
apps/finance/: admin.py  apps.py  choices.py  constants.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/reports/: services.py  tests.py  views.py
apps/users/: models.py  serializers.py  tests.py  urls.py  views.py
config/: urls.py
config/settings/: base.py
requirements/: base.in  base.txt  dev.in  dev.txt  prod.txt
(+7 files in other folders)
