[project]
name = "expense-tracker"
version = "0.1.0"
description = "Personal finance and expense tracking API."
requires-python = ">=3.11"
dependencies = [
    "Django>=4.2,<4.3",
    "djangorestframework",
    "djangorestframework-simplejwt",
    "django-cors-headers",
    "django-environ",
    "django-filter",
    "drf-spectacular",
    "psycopg[binary]",
    "whitenoise",
]

# The app is not itself an installable package ? uv only manages its
# dependencies. This keeps the Vercel uv builder from trying to build the
# project and lets it install straight from the pinned dependency set.
[tool.uv]
package = false

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["apps", "config"]

[tool.coverage.run]
source = ["apps"]
omit = [
    "*/migrations/*",
    "*/tests.py",
    "*/apps.py",
    "manage.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
